--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^6.4.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-floating-whatsapp": "^5.0.8",
     "react-icons": "^4.4.0",
     "use-media": "^1.4.0"
   },
